# e4m-mcp

./: .dockerignore  .gitignore  README.md
docs/: mcp-feature-catalog.md  mcp-server-dev-guide.md
e4m-data/: .gitignore  Dockerfile  mcp.json  pyproject.toml
e4m-data/src/e4m_data/: __main__.py  server.py
e4m-materials/: Dockerfile  mcp.json  pyproject.toml
e4m-materials/data/: df_pt.csv  df_pt_pymatgen.csv
e4m-materials/src/e4m_materials/: __main__.py  server.py
e4m-utils/: Dockerfile  mcp.json  pyproject.toml
e4m-utils/src/e4m_utils/: __main__.py  server.py
