[project]
name = "e4m-materials"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.3",
    "pymatgen>=2024.0",
    "pint>=0.23",
    "pandas>=2.0",
    "pydantic>=2.0",
    "uvicorn",
    "starlette",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/e4m_materials"]
