[project]
name = "e4m-utils"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.3",
    "pint>=0.23",
    "requests>=2.31",
    "pydantic>=2.0",
    "uvicorn",
    "starlette",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/e4m_utils"]
